# scorep_plugin_mpi

./: CMakeLists.txt  README.md
include/: plugin_types.h  utils.h
openmpi-patches/: 0001-MPI_T-Add-4-new-metrics-for-MPI_Reduce-MPI_Allreduce.patch  0001-MPI_T-Add-new-PVARs.patch  0004-MPI_T-with-Score-P-plugin-Fix-problem-of-reinitializ.patch
src/: scorep_plugin_mpi.cpp  scorep_plugin_mpi.h
src/mpi_t_sampling/: Makefile  mpi_hooks.c  mpi_t_sampling.cpp  mpi_t_sampling.h  mpi_t_sampling_overrides.cpp  mpi_t_sampling_overrides.h  utility.c  utility.h
